--- a/Report/misc/packages.tex
+++ b/Report/misc/packages.tex
@@ -6,6 +6,7 @@
 \usepackage{booktabs}
 \usepackage{caption}
 \usepackage{subcaption}
+\usepackage{multirow}
 \usepackage{geometry}
 
 \usepackage{graphicx}
