--- a/Report/sections/theory.tex
+++ b/Report/sections/theory.tex
@@ -164,6 +164,7 @@ Particle-hole excitations are always made of a combined creation and annihilatio
 \begin{table}
 	\centering
 	\begin{tabular}{r c c}
+		\toprule
 		Object && Density expression\\
 		\midrule
 		Fermionic field && $\displaystyle \hat \psi_s (x) = \hat U_s \exp\left\{ \sgn(s) \frac{2\pi}{L} \sum_q \frac{e^{iqx}}{q} \hat \rho_s (-q) \right\}$ \\
@@ -173,7 +174,8 @@ Particle-hole excitations are always made of a combined creation and annihilatio
 		Boson fields gradients && $\displaystyle \begin{aligned}
 			\nabla \hat \phi(x) &= - \pi \left[ \hat \rho_\mathrm{R}(x) + \hat \rho_\mathrm{L}(x) \right] \\ 
 			\nabla \hat \theta(x) &= \pi \left[ \hat \rho_\mathrm{R}(x) - \hat \rho_\mathrm{L}(x) \right]
-		\end{aligned}$
+		\end{aligned}$ \\
+		\bottomrule
 	\end{tabular}
 	\caption{Summary of the relevant quantities of the bosonization scheme as expressions involving physical (side resolved) fermionic density.}
 	\label{tab:bosonization-formulas}
