imported data, fixed report, list of missing

--- a/Report/main.tex
+++ b/Report/main.tex
@@ -28,6 +28,16 @@
     \begin{center}
     	{\footnotesize All of the code can be found at open-access in \href{https://github.com/nepero27178/FermiHubbardDMRG}{this repository}:\\ \url{https://github.com/nepero27178/FermiHubbardDMRG}}
     \end{center}
+    
+    {\color{tabred}What is missing:
+    	\begin{enumerate}
+    		\item A short subsection on the meaning of the parameter $K$ (attractive/repulsive);
+    		\item Comments on theoretical behaviors of correlators;
+    		\item Comments on simulated behaviors of correlators;
+    		\item $L \ge 38$ data for single-point characterization;
+    		\item \texttt{:loglog} plots of correlators data.
+    	\end{enumerate}
+    }
 \end{abstract}
 \tableofcontents
 
